tests/miniJava/neg/006719_mutation.MiniJava
class java { public static void void Main ( String [ ] java ) { { } } }
